--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-<h1>Hello World!</h1>
+<h1>BIG Little Science Centre</h1>
+
+<nav>
+	<ul>
+		<li><a href="#">Visit Us</a>
+			<ul>
+				<li><a href="#">Clubs</a></li>
+				<li><a href="#">Camps</a></li>
+				<li><a href="#">Pro-D</a></li>				
+			</ul>
+		</li>
+		<li><a href="#">Special Events</a>
+			<ul>
+				<li><a href="#">Speaker Series</a></li>
+				
+			</ul>			
+		</li>
+		<li><a href="#">Support</a>
+			<ul>
+				
+			</ul>
+		</li>
+	</ul>
+</nav>
