Basic HTML Structure
Added numerous pages, with basic text content

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 	<meta charset="utf-8">
 	<title>BIG Little Science Centre</title>
 	<style type="text/css">
-		img {
-			width: 40px;
-			margin: 10px;
+		nav img {
+			width: 30px;
+			margin: 7.5px;
 		}
 		img[src*="Black"] {
 			filter: invert(1);
@@ -23,37 +23,68 @@
 		<ul>
 			<li><a href="#">Visit Us</a>
 				<ul>
-					<li><a href="#"></a></li>
-					<li><a href="#">Booking</a></li>
-					<li><a href="#">Clubs</a></li>
-					<li><a href="#">Camps</a></li>
+					<li><a href="#">Drop-In</a></li>
+					<li><a href="#">Shows</a></li>
+					<li><a href="#">Hands-On Rooms</a></li>
 					<li><a href="#">Membership</a></li>				
 				</ul>
 			</li>
-			<li><a href="#">Special Events</a>
+<!-- 			<li><a href="#">Special Events</a>
 				<ul>
 					<li><a href="#">Speaker Series</a></li>
 					
 				</ul>			
+			</li> -->
+			<li><a href="#">About</a>
+				<li><a href="about.html">About Us</a></li>
+				<li><a href="contact.html">Contact</a></li>
+				<li><a href="staff.html">Staff</a></li>
 			</li>
 			<li><a href="#">Support</a>
 				<ul>
-					
+					<li><a href="#">Donate</a></li>
+<!-- 					<li><a href="#">Fundraisers</a></li> -->
+					<li><a href="supporters.html">Supporters</a></li>
+					<li><a href="volunteer.html">Volunteer</a></li>
 				</ul>
 			</li>
 		</ul>
 	</nav>
 
-	<h2></h2>
+	<img src="Demo.jpg" alt="" style="width: 400px;">
+	<h2>Explore, Discover, Learn</h2>
+	<p>BIG Little Science Centre is dedicated to developing a passion for science in our community.</p>
 
-	<nav class="foot" style="background-color: blue;display:flex; flex-flow: row wrap;">
+	<a href="https://www.canadahelps.org/CharityProfilePage.aspx?CharityID=d83460">Donate Now</a>
+
+	<nav class="foot" style="background-color: blue;display:flex; flex-flow: row wrap; color: white;">
 		<ul>
-			<li><a href="https://www.facebook.com/pages/BIG-Little-Science-Centre/190315953017"><img src="Facebook.webp" alt="Facebook"></a></li>
-			<li><a href="https://instagram.com/biglittlescience?ref=badge"><img src="InstagramBlack.webp" alt="Instagram"></a></li>
-			<li><a href="https://www.tripadvisor.ca/Attraction_Review-g154932-d4101523-Reviews-BIG_Little_Science_Centre-Kamloops_British_Columbia.html"><img src="TripAdvisorBlack.webp" alt="TripAdvisor"></a></li>
-			<li><a href="https://twitter.com/BIG_Little_Sci"><img src="Twitter.webp" alt="Twitter"></a></li>
-			<li><a href="https://www.youtube.com/user/BIGLittleScience"><img src="YouTube.webp" alt="YouTube"></a></li>
+			<li><a href="https://www.facebook.com/pages/BIG-Little-Science-Centre/190315953017"><img src="Icons/Facebook.webp" alt="Facebook"></a></li>
+			<li><a href="https://instagram.com/biglittlescience?ref=badge"><img src="Icons/InstagramBlack.webp" alt="Instagram"></a></li>
+			<li><a href="https://www.tripadvisor.ca/Attraction_Review-g154932-d4101523-Reviews-BIG_Little_Science_Centre-Kamloops_British_Columbia.html"><img src="Icons/TripAdvisorBlack.webp" alt="TripAdvisor"></a></li>
+			<li><a href="https://twitter.com/BIG_Little_Sci"><img src="Icons/Twitter.webp" alt="Twitter"></a></li>
+			<li><a href="https://www.youtube.com/user/BIGLittleScience"><img src="Icons/YouTube.webp" alt="YouTube"></a></li>
 		</ul>
+		<p>&#8962; <br />
+			458 Seymour Street<br />
+			Kamloops, BC<br />
+			V2C 2G7<br />
+			<br />
+			&#x2709;<br /> Box 882 Station Main <br />
+			Kamloops, BC <br />
+			V2C 5M8<br />
+			<a href="tel:+12505542572">(250) 554-2572</a><br />
+			<a href="mailto:gord@blscs.org">gord@blscs.org</a>
+		</p> 
+		<p>
+			Sunday Closed<br />
+			Monday Closed<br />
+			Tuesday 10:00am - 4:00pm<br />
+			Wednesday 10:00am - 4:00pm<br />
+			Thursday 10:00am - 4:00pm<br />
+			Friday 10:00am - 4:00pm<br />
+			Saturday 10:00am - 4:00pm<br />
+		</p>
 	</nav>
 </body>
 </html>
